--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "bcryptjs": "^3.0.3",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^8.19.3",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
